--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <img src="">
       <img src="">
 
-    <div class="Footer"></div>
+    <div class="Footer">© Copyright 2017 Rheginald Patricio</div>
 
 
 
