--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
     <p>
 
     <h3>Connect With Me</h3>
-      <img src="">
-      <img src="">
-      <img src="">
+      <img src="assets/images/github.jpg">
+      <img src="assets/images/linkedin.png">
+      <img src="assets/images/stackoverflow.png">
 
     <div class="Footer">© Copyright 2017 Rheginald Patricio</div>
 
