--- a/portfolio.html
+++ b/portfolio.html
@@ -24,15 +24,26 @@
     <h2>Portfolio</h2>
     
       <div class="piclink">
+        <div class="images">
+          <div class="hangmanimg"><img src="assets/images/.jpg">
+          <div class="rpggameimg"><img src="assets/images/rpggame.jpg">
+          <div class="triviagameimg"><img src="assets/images/triviagame.jpg">
+          <div class="rutgersimg"><img src="assets/images/rutgersinfowidget.jpg">
+          <div class="rockpaperscissorsimg"><img src="assets/images/rockpaperscissors.jpg">
+            <div class="imagenames">
+              <div class="hangman">Hangman
+              <div class="rpggame">RPG Game
+              <div class="triviagame">Trivia Game
+              <div class="rutgers">Rutgers Info Widget
+              <div class="rockpaperscissors">Rock Paper Scissors
+            </div>
+          </div>
 
-      </div>
-
-    <p>
 
     <h3>Connect With Me</h3>
-      <img src="">
-      <img src="">
-      <img src="">
+      <img src="assets/images/github.jpg">
+      <img src="assets/images/linkedin.png">
+      <img src="assets/images/stackoverflow.png">
 
     <div class="Footer">© Copyright 2017 Rheginald Patricio</div>
 
