--- a/contact.html
+++ b/contact.html
@@ -11,9 +11,9 @@
       
 
       <ul>
-          <li><a href="">About</li>
-          <li><a href="">Portfolio</li>
-          <li><a href="">Contact</li>
+          <li><a href="index.html">About</li>
+          <li><a href="portolio.html">Portfolio</li>
+          <li><a href="contact.html">Contact</li>
       </ul>
 
   	</div>
@@ -26,6 +26,9 @@
     <img src="">
 
     <p>
+      
+    </p>
+
 
     <h3>Connect With Me</h3>
       <img src="assets/images/github.jpg">
