--- a/portfolio.html
+++ b/portfolio.html
@@ -11,9 +11,9 @@
       
 
       <ul>
-          <li><a href="">About</li>
-          <li><a href="">Portfolio</li>
-          <li><a href="">Contact</li>
+          <li><a href="index.html">About</li>
+          <li><a href="portolio.html">Portfolio</li>
+          <li><a href="contact.html">Contact</li>
       </ul>
 
   	</div>
