--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+  <body background="assets/images/ep_naturalwhite.png">
 
   <head>
     <title>Rheginald Patricio</title>
@@ -12,7 +13,7 @@
 
       <ul>
           <li><a href="index.html">About</li>
-          <li><a href="portolio.html">Portfolio</li>
+          <li><a href="portfolio.html">Portfolio</li>
           <li><a href="contact.html">Contact</li>
       </ul>
 
@@ -31,9 +32,9 @@
 
 
     <h3>Connect With Me</h3>
-      <img src="assets/images/github.jpg">
-      <img src="assets/images/linkedin.png">
-      <img src="assets/images/stackoverflow.png">
+      <img src="assets/images/github.jpg" width="50" height="50" alt="github">
+      <img src="assets/images/linkedin.png" width="50" height="50" alt="linkedin">
+      <img src="assets/images/stackoverflow.png" width="46.5" height="45" alt="linkedin">
 
     <div class="Footer">© Copyright 2017 Rheginald Patricio</div>
 
